edited src for load and play game

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script type="text/javascript" src="phaser.min.js"></script>
-    <script type="text/javascript" src="scene1.js"></script>
-    <script type="text/javascript" src="scene2.js"></script>
+    <script type="text/javascript" src="loadGame.js"></script>
+    <script type="text/javascript" src="playGame.js"></script>
     <script type="text/javascript" src="game.js"></script>
 </head>
 <body>
